Prevent .coding-icons from wrapping awkwardly
[screenshot](http://i.imgur.com/ZWvonET.png)

--- a/stylesheets/scss/application.scss
+++ b/stylesheets/scss/application.scss
@@ -218,6 +218,7 @@ li {
   padding: 0;
   margin: 0;
   margin-bottom: 75px;
+  white-space: nowrap;
   li {
     padding: 1px 10px;
     margin: 0;
